@@ -14,6 +14,7 @@ class MaterialManagementItem : public QObject, public QTreeWidgetItem
 
 public:
   MaterialManagementItem(QTreeWidget *parent);
+  MaterialManagementItem(QTreeWidgetItem *parent);
   ~MaterialManagementItem();
 
   std::vector<std::vector<std::string>> group_properties;
@@ -40,8 +41,11 @@ public:
   std::vector<std::vector<std::vector<double>>> property_matrix_gui;
   // property_scalar[i][ii][iii] matrix
 
-  void initialize(QString material_id_qstring, QString material_name_qstring);
+  void initialize_cubit(QString material_id_qstring, QString material_name_qstring);
+  void initialize_library(std::vector<std::string> tree_data);
   void update(); // updates the data
+  void update_cubit(); // updates the data
+  void update_library(); // updates the data
   int get_properties_data_id_from_group(std::string group); // searches for the group in the group_properties and returns the linked indices from the properties or -1 if it fails
   void setScalarPropertyGUI(std::string group, double prop_scalar); // sets the scalar property to given value
   double getScalarPropertyGUI(std::string group); // gets the scalar property value
@@ -49,10 +53,23 @@ public:
   std::vector<std::vector<double>> getMatrixPropertyGUI(std::string group); // gets the matrix property values
 
   bool isInitialized;
+  bool isCubit;
+  bool isLibraryGroup;
+  bool isLibraryMaterial;
   int material_id;
   QString material_id_qstring;
   std::string material_name;
   QString material_name_qstring;
+
+
+  QString library_name_qstring;
+  std::string library_name;
+  QString library_description_qstring;
+  std::string library_description;
+  QString library_group_qstring;
+  std::string library_group;
+
+  std::string hdf5path;
 
   CalculiXCoreInterface *ccx_iface;
   MaterialInterface *mat_iface;
